feat: update Spring Boot version to 3.5.3